done footer part

--- a/index.html
+++ b/index.html
@@ -188,10 +188,45 @@
             View All
           </button>
         </div>
-        <marquee behavior="" scrollamount="18" direction="left">  I am Ovi chowdhury Thanks of visiting our website. For any information please contact with us.</marquee>
+        <marquee behavior="" scrollamount="18" direction="left">  I am Ovi chowdhury Thanks of visiting our website. For any information please contact with us.</marquee> 
     </div> 
 </section>
+<footer>
+    <div class="foot">
+      <div class="kids-edu">
+        <div>
+          <div>
+            <img src="assets/logo.png" alt="">
+          </div>
+          <h2>Kids <br>Education</h2>
+        </div>
+        <p class="text">
+          Quality education nurtures creativity, critical thinking, and empathy in children, laying the foundation for a brighter future. Encouraging curiosity and lifelong learning empowers kids to unlock their full potential.
+        </p>
+      </div>
 
-</header>
+
+      <div class="foot-nav">
+        <h2>About School</h2>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Facilities</li>
+          <li>Admission</li>
+        </ul>
+      </div>
+
+      <div class="social">
+        <h2>Keep In Touch</h2>
+        <div>
+          <img src="assets/fb.png" alt="">
+          <img src="assets/google+.png" alt="">
+          <img src="assets/twitter.png" alt="">
+          <img src="assets/fb.png" alt="">
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
