--- a/index.html
+++ b/index.html
@@ -11,39 +11,47 @@
   </head>
   <body>
     <!-- Header Part -->
+
+
+
     <header>
       <div>
         <nav class="laptop">
           <div class="logo">
             <img src="assets/logo.png" alt="" />
-            <h2>School</h2>
-          </div>
-          <ul class="navvv">
+              <h2>School</h2>
+               </div>
+                <ul class="navvv">
             <li class="h"><a href="">Home</a></li>
             <li class="a"><a href="">About</a></li>
             <li class="faci"><a href="">Facilities</a></li>
             <li class="adm"><a href="">Admission</a></li>
-          </ul>
-          <button class="btn">Contact</button>
+               </ul>
+            <button class="btn">Contact</button>
         </nav>
       </div>
       <div>
         <nav class="mo">
-          <div class="mo-c">
+            <div class="mo-c">
             <div>
               <img src="assets/logo.png" alt="" />
             </div>
             <div>
               <img class="ham" src="assets/hamburger.png" alt="" />
             </div>
-          </div>
+              </div>
           <hr />
         </nav>
       </div>
+
+
       <!-- hero section -->
+
+
+
       <div class="hero-s">
         <div class="left">
-          <h2>
+            <h2>
             <span class="y-span">Empowering</span> <br />
             students from small <br />
             age <span class="b-span"> towards vision</span>
@@ -51,9 +59,10 @@
           <p class="text">
             With the courage, Confidence, Creativity and Compassion to make
             their Unique Contribution in a Diverse and Dynamic World.
-          </p>
+           </p>
           <div>
-            <button class="enroll">Enroll Now</button>
+             <button class="enroll">Enroll Now</button>
+
           </div>
         </div>
         <div>
@@ -62,17 +71,23 @@
       </div>
     </header>
 
-    <!-- <- standard Curriculum --> -->
+
+
+
+    <!-- <- standard Curriculum -->
+
+
     <section class="stand">
       <div class="curricu">
         <h2>Standard Curriculum</h2>
+
         <div class="container">
             
           <div class="card1">
-            <div>
+              <div>
                 <img src="assets/kinder.png" alt="" />
             </div>
-            <h3>Kinder (3-6) years</h3>
+              <h3>Kinder (3-6) years</h3>
             <p class="text2">
               Cum sociis natoque penatibus et magnis dis parturient montes,
               nascetur ridiculus mu sdis parturient
@@ -83,12 +98,14 @@
           </div>
 
           <div class="card1 card2">
-            <div>
+              <div>
                 <img src="assets/elementary.png" alt="" />
             </div>
             <h3>Kinder (3-6) years</h3>
+
+
             <p class="text2">
-              Cum sociis natoque penatibus et magnis dis parturient montes,
+               Cum sociis natoque penatibus et magnis dis parturient montes,
               nascetur ridiculus mu sdis parturient
             </p>
             <p class="read read2">
@@ -96,11 +113,12 @@
             </p>
           </div>
 
-          <div class="card1 card3">
+            <div class="card1 card3">
             <div>
                 <img src="assets/kinder.png" alt="" />
             </div>
             <h3>Kinder (3-6) years</h3>
+            
             <p class="text2">
               Cum sociis natoque penatibus et magnis dis parturient montes,
               nascetur ridiculus mu sdis parturient
@@ -109,24 +127,31 @@
                 Read More
             </p>
           </div>
+
         </div>
         <div class="arrow-container">
             <div>
-                <button>
+      <button>
                     <i class="fa-solid fa-arrow-left"></i>
                 </button>
                 <button>
                     <i class="fa-solid fa-arrow-right"></i>
-                </button>
+    </button>
             </div>
         </div>
       </div>
     </section>
 
 
+
+
+
     <!-- Out Stories -->
+
+
     <section class="story">
         <div class="s-container">
+
             <h2>Our Stories</h2>
 
            <div class="all-story">
@@ -149,6 +174,7 @@
                 </div>
 
                 <div class="multi-story">
+
                     <div class="card22">
                         <img src="assets/story-2.png" alt="">
                         <p class="date2">
@@ -159,6 +185,7 @@
                     <div class="card22">
                         <img src="assets/story-3.png" alt="">
                         <p class="date2 date-blue">
+
                             January 20, 2019
                         </p>
                         <p class="text4">Find out if a school fits the family's needs</p>
@@ -179,27 +206,33 @@
                     </div>
                 </div>
             </div>
+
             <div class="btn-view-container">
               <button class="view">
+
                 View All
               </button>
+
             </div>
-            <marquee behavior="" scrollamount="18" direction="left">I am Ovi Chowdhury Thanks of visiting our website. For any information please contact with us.</marquee>
+            <marquee behavior="" scrollamount="18" direction="left">I am Ovi Chowdhury, Thanks of visiting our website. For any information please contact with us.</marquee>
         </div>
     </section>
 
-    <!-- Marque -->
-     <section>
-     </section>
+
 
     <!-- Footer -->
+
+
     <footer>
       <div class="foot">
         <div class="kid-education">
+
           <div>
             <div>
+
               <img src="assets/logo.png" alt="">
             </div>
+
             <h2>Kids <br>Education</h2>
           </div>
           <p class="text">
@@ -219,13 +252,17 @@
         </div>
 
         <div class="social">
+
           <h2>Keep In Touch</h2>
           <div>
             <img src="assets/fb.png" alt="">
             <img src="assets/google+.png" alt="">
             <img src="assets/twitter.png" alt="">
             <img src="assets/fb.png" alt="">
+
+
           </div>
+
         </div>
       </div>
     </footer>
